[metadata]
name = dustmaker
version = 1.0.1
author = Mark Gordon
author_email = msg555@gmail.com
description = Dustforce level scripting framework
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/msg555/dustmaker/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages =
    dustmaker
    dustmaker.cmd
python_requires = >=3.6
install_requires =
    dataclasses;python_version<'3.7'
